fix(GlDropdown): Match chevron color and fix disabled spacing

--- a/src/components/base/dropdown/dropdown.scss
+++ b/src/components/base/dropdown/dropdown.scss
@@ -91,6 +91,10 @@
       border-right: $gl-spacing-scale-5 solid;
     }
 
+    &.btn-default:not(:disabled)::after {
+      @include gl-border-gray-500;
+    }
+
     &.btn-confirm,
     &.btn-info,
     &.btn-success,
@@ -99,6 +103,8 @@
       margin-left: 1px;
     }
 
+    &:disabled,
+    &.disabled,
     &[class*='-secondary'] {
       margin-left: -1px;
     }
