--- a/src/scss/utility-mixins/border.scss
+++ b/src/scss/utility-mixins/border.scss
@@ -83,6 +83,10 @@
   border-color: $gray-400;
 }
 
+@mixin gl-border-gray-500 {
+  border-color: $gray-500;
+}
+
 @mixin gl-border-blue-200($hover: true) {
   border-color: $blue-200;
 }
